# cythonDemo

./: .gitignore  CMakeLists.txt  README.md  build.py  dev-requirements.txt  pyproject.toml
.github/workflows/: build_wheels.yml  test.yml
c_lib/: CMakeLists.txt  items.c  items.h
src/cythondemo/: addtwo.py  shopping_list.pyx
src/cythontest/: addone.pyx  shopping_list.pyx
src/cythontest/c_lib/: items.pxd
tests/: test_addone.py  test_addtwo.py  test_shopping_list.py
